fixed navigation rollover overflow bug

--- a/scarlet/cms/source/stylesheets/common/_header-object.scss
+++ b/scarlet/cms/source/stylesheets/common/_header-object.scss
@@ -1,10 +1,10 @@
 .header-object {
 	@include microfix;
+	position: relative;
 	width: 100%;
 	max-width: $max-width;
-	margin: 0 30px 30px;
-	position: relative;
-	padding: 40px 30px 0;
+    margin: 0 30px;
+    padding: 40px 30px;
 	z-index: $z-mid;
 }
 
@@ -16,7 +16,7 @@
 	font-size: 18px;
 	position: absolute;
 	left: 30px;
-	top: 0;
+	top: 40px;
 
 	&:before {
 		color: $red;
@@ -35,6 +35,7 @@
 }
 
 .header-object__title {
+	margin-top: 30px;
 	font-size: 32px;
 	color: $black;
 	float: left;
