--- a/scarlet/cms/source/stylesheets/common/_nav-main.scss
+++ b/scarlet/cms/source/stylesheets/common/_nav-main.scss
@@ -1,7 +1,6 @@
 .nav-main {
 	@include box-shadow;
 	background-color: $white;
-	margin-bottom: 25px;
 	position: relative;
 	z-index: 0;
 	width: 100%;
