--- a/scarlet/cms/static/scarlet/css/main.css
+++ b/scarlet/cms/static/scarlet/css/main.css
@@ -2778,11 +2778,11 @@ button,
           flex-direction: row; }
 
 .header-object {
+  position: relative;
   width: 100%;
   max-width: 1400px;
-  margin: 0 30px 30px;
-  position: relative;
-  padding: 40px 30px 0;
+  margin: 0 30px;
+  padding: 40px 30px;
   z-index: 2; }
   .header-object:before, .header-object:after {
     content: '';
@@ -2798,7 +2798,7 @@ button,
   font-size: 18px;
   position: absolute;
   left: 30px;
-  top: 0; }
+  top: 40px; }
   .header-object__breadcrumb:before {
     color: #f00;
     font-size: 15px;
@@ -2811,6 +2811,7 @@ button,
   font-size: 16px; }
 
 .header-object__title {
+  margin-top: 30px;
   font-size: 32px;
   color: #4d4d4d;
   float: left; }
@@ -3031,7 +3032,6 @@ button,
   -webkit-box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.18);
           box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.18);
   background-color: white;
-  margin-bottom: 25px;
   position: relative;
   z-index: 0;
   width: 100%;
